--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "grunt-ng-annotate": "^1.0.1",
     "grunt-open": "~0.2.3",
     "grunt-sass": "^1.0.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-ng-html2js-preprocessor": "^0.2.0",
     "matchdep": "~0.3.0"
   }
 }
